<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginRight="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_card_photo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_card_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_card_photo"
                android:layout_marginLeft="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/card_judul" />

            <TextView
                android:id="@+id/tv_card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_card_judul"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                tools:text="@string/card_type" />

            <TextView
                android:id="@+id/tv_card_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_card_type"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                tools:text="@string/card_upload" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
